Fixed post-meta alignment a better way.  Reduced vertical gap.

--- a/skatepark/assets/theme.css
+++ b/skatepark/assets/theme.css
@@ -507,9 +507,10 @@ a:not(.ab-item):not(.screen-reader-shortcut):focus {
 	text-decoration: none;
 }
 
-.post-meta {
+.post-meta.wp-block-group {
 	flex-direction: column;
-	align-items: start !important;
+	align-items: start;
+	gap: .5em;
 }
 
 .post-meta .wp-block-post-date,
