--- a/skatepark/sass/elements/_post-meta.scss
+++ b/skatepark/sass/elements/_post-meta.scss
@@ -1,6 +1,9 @@
 .post-meta {
-	flex-direction: column;
-	align-items: start !important;
+	&.wp-block-group {
+		flex-direction: column;
+		align-items: start;
+		gap: .5em;
+	}
 
 	.wp-block-post-date,
 	.taxonomy-category,
